# app-store-server-library-python

./: .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.md  NOTICE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci-prb.yml  ci-release-docs.yml  ci-release.yml  ci-snapshot.yml
appstoreserverlibrary/: api_client.py  jws_signature_creator.py  promotional_offer.py  receipt_utility.py  signed_data_verifier.py  signed_data_verifier_v2.py
appstoreserverlibrary/models/: AbstractAdvancedCommerceBaseItem.py  AbstractAdvancedCommerceInAppRequest.py  AbstractAdvancedCommerceItem.py  AbstractAdvancedCommerceResponse.py  AccountTenure.py  AdvancedCommerceDescriptors.py  AdvancedCommerceEffective.py  AdvancedCommerceInfo.py  AdvancedCommerceOffer.py  AdvancedCommerceOfferPeriod.py  AdvancedCommerceOfferReason.py  AdvancedCommerceOneTimeChargeCreateRequest.py  AdvancedCommerceOneTimeChargeItem.py  AdvancedCommercePeriod.py  AdvancedCommercePriceIncreaseInfo.py  AdvancedCommercePriceIncreaseInfoStatus.py  AdvancedCommerceReason.py  AdvancedCommerceRefund.py  AdvancedCommerceRefundReason.py  AdvancedCommerceRefundType.py  AdvancedCommerceRenewalInfo.py  AdvancedCommerceRenewalItem.py  AdvancedCommerceRequest.py  AdvancedCommerceRequestInfo.py  AdvancedCommerceRequestRefundItem.py  AdvancedCommerceRequestRefundRequest.py  AdvancedCommerceRequestRefundResponse.py  AdvancedCommerceSubscriptionCancelRequest.py  AdvancedCommerceSubscriptionCancelResponse.py  AdvancedCommerceSubscriptionChangeMetadataDescriptors.py  (+123 more)
cli/: README.md  __init__.py  retention_message.py
docs/: requirements.txt
tests/: test_advanced_commerce_models.py  test_api_client.py  test_api_client_async.py  test_app_data.py  test_decoded_payloads.py  test_jws_signature_creator.py  test_payload_verification.py  test_promotional_offer_signature_creator.py  test_receipt_utility.py  test_retention_messaging.py  test_retention_response_serialization.py  test_x509_verifiction.py  test_xcode_signed_data.py  util.py
(+62 files in other folders)
