# Copyright (c) 2025 Apple Inc. Licensed under MIT License.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app-store-server-library"
version = "3.1.0"
description = "The App Store Server Library"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.7, <4"
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "attrs>=21.3.0",
    "PyJWT>=2.6.0,<3",
    "requests>=2.28.0,<3",
    "cryptography>=40.0.0",
    "pyOpenSSL>=23.1.1",
    "asn1==3.2.0",
    "cattrs>=23.1.2",
]

[project.optional-dependencies]
async = ["httpx"]

[project.urls]
Documentation = "https://apple.github.io/app-store-server-library-python/"
Repository = "https://github.com/apple/app-store-server-library-python"
Issues = "https://github.com/apple/app-store-server-library-python/issues"
Changelog = "https://github.com/apple/app-store-server-library-python/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = {find = {exclude = ["tests"]}}

[tool.setuptools.package-data]
appstoreserverlibrary = ["py.typed"]
